examples/03-sample-app-manifests/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-ai-service
  namespace: default
  annotations:
    cloud.google.com/backend-config: '{"default": "ai-app-backend-config"}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    app: sample-ai-app
  ports:
  - port: 80
    targetPort: 8080
    name: http
